added some animation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
   <body>
     <!-- navbar container -->
     <div class="navbar-container">
+      <div class="dicount-tag-div">
+        <img
+          src="https://media.tenor.com/iDJVxs6CHRQAAAAi/desconto.gif"
+          alt=""
+          class="dicount-tag-img"
+        />
+      </div>
       <img
         src="https://img.icons8.com/?size=512&id=30840&format=png"
         alt=""
@@ -41,6 +48,13 @@
         alt=""
         class="apple-logo"
       />
+      <div class="dicount-tag-div2">
+        <img
+          src="https://media.tenor.com/iDJVxs6CHRQAAAAi/desconto.gif"
+          alt=""
+          class="dicount-tag-img2"
+        />
+      </div>
     </div>
     <!--------------------- Sub navbar --------------------->
     <div class="sub-navbar">
@@ -118,6 +132,14 @@
       </div>
     </div>
 
+    <!------------------------ IPHONE IMAGE ------------------>
+    <div class="iphone-img-div">
+      <img
+        src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/iphone-14-model-unselect-gallery-2-202303_GEO_US?wid=2560&hei=1440&fmt=p-jpg&qlt=80&.v=1676930656150"
+        alt=""
+        class="iphone-img"
+      />
+    </div>
     <script src="app.js" async defer></script>
   </body>
 </html>
