--- a/santa.html
+++ b/santa.html
@@ -21,9 +21,11 @@
     </div>
 
     <button class="snow-btn" onclick="snow()">CLICK FOR SNOW</button>
-    <button class="enter-site hidden">
-      <a href="\index.html" class="enter-site-link"> ENTER THE SITE </a>
-    </button>
+
+    <a href="\index.html" class="enter-site-link hidden">
+      <button class="enter-site hidden">ENTER THE SITE</button>
+    </a>
+
     <script src="app.js" async defer></script>
   </body>
 </html>
